# equipe-2

backend/: pyproject.toml
backend/src/: main.py  security.py
backend/src/database/: schema.py
backend/src/routes/: admin.py  auth.py  categorias.py  pedidos.py  produtos.py  usuarios.py
